--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
         android:theme="@style/Theme.Yahooooo"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.ChangePass"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.CheckPass"
+            android:exported="false" />
+        <activity
             android:name=".Activity.FullPostActivity"
             android:exported="false" />
         <activity
@@ -58,6 +64,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
             android:name=".Service.SendMediaMessageService"
             android:exported="false"
@@ -66,7 +73,13 @@
             android:name=".Service.UploadMediaPostService"
             android:exported="false"
             android:foregroundServiceType="dataSync" />
-
+        <service
+            android:name=".Service.NotificationServices"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
