--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,14 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Yahooooo"
         tools:targetApi="31">
+        <activity
+            android:name=".Activity.DeviceActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.ChangePass"
             android:exported="false" />
